Comecei escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore dignissimos voluptatum quae sint molestias hic alias saepe beatae reiciendis possimus, consectetur sed ab ipsa sit recusandae, pariatur labore enim esse?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos dolor velit error tenetur aliquam voluptates similique ipsa. Tempora dolorum blanditiis illo. Culpa alias molestiae ipsa deleniti inventore nobis iste nam?</p>
         </article>
     </main>
 </body>
